# pxtone-plug

./: .gitignore  Cargo.toml  LICENSE_NIH-PLUG_ISC  PTCOLLAGE_LICENSE  README.md  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: autobuild.yml
pxtone-plug/: Cargo.toml
pxtone-plug/res/: 002-sineOrganWobble.ptvoice  030-triaSpicyloud-d2.ptvoice  kira_bi1.ptvoice  piano_EL4.ptvoice  strings_pepo2.ptvoice
pxtone-plug/src/: editor.rs  lib.rs  main.rs
pxtone-plug/src/synth/: mod.rs
xtask/: Cargo.toml
