[package]
name = "pxtone-plug"
version = "0.1.0"
edition = "2021"
description = "VST3/CLAP plugin for playing pxtone woices"
license = "GPL-3.0-or-later"
repository = "https://github.com/PieKing1215/pxtone-plug"
readme = "README.md"
keywords = ["pxtone", "VST", "VST3", "CLAP"]
categories = ["multimedia::audio"]
default-run = "pxtone-plug"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "727b15a", features = ["standalone"]}
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug", rev = "727b15a" }
pxtone-sys = { git = "https://github.com/PieKing1215/rust-pxtone-sys" }
log = "0.4"
simplelog = { version = "0.12", default-features = false, features = ["local-offset"] }
rfd = "0.11"
serde = { version = "1.0", features = ["rc"] }

[lib]
crate-type = ["cdylib", "lib"]