[package]
name = "pxtone-plug"
version = "0.1.0"
edition = "2021"
description = "VST3/CLAP plugin for playing pxtone woices"
license = "GPL-3.0-or-later"
repository = "https://github.com/PieKing1215/pxtone-plug"
readme = "README.md"
keywords = ["pxtone", "VST", "VST3", "CLAP"]
categories = ["multimedia::audio"]
default-run = "pxtone-plug"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", features = ["standalone"]}
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
pxtone-sys = { git = "https://github.com/PieKing1215/rust-pxtone-sys", rev = "9542ca3fa3f98c5b48b6adcff2f0b67204bfae47" }
log = "0.4"
rfd = "0.17"
serde = { version = "1.0", features = ["rc"] }
time = "0.3.45"

[lib]
crate-type = ["cdylib", "lib"]
